Update a few things

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
-bg: "snow.jpg"
+bg: "main.jpg"
 layout: default
-title: "Wentao Yang"
-summary: "Have a good trip"
+title: "T7=42"
+summary: '"Forever", he said.'
 ---
 
 {% for post in site.posts limit: 5 %}
